--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@wojtekmaj/react-daterange-picker": "^4.1.0",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.14.0",
     "flowbite": "^1.5.1",
     "flowbite-react": "^0.1.5",
     "gatsby": "^4.20.0",
@@ -24,6 +26,7 @@
     "react-date-picker": "^9.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.7.1",
     "react-slick": "^0.29.0",
     "swiper": "^8.4.5",
     "tailwind-datepicker-react": "^1.2.3"
